--- a/contato/contato.html
+++ b/contato/contato.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="../css/reset.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/contato.css">
+        <link rel="stylesheet" href="../css/nav-footer.css">
     </head>
     <body>
         <header>
