--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="../css/reset.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/produtos.css">
+        <link rel="stylesheet" href="../css/nav-footer.css">
+
     </head>
     <body>
         <header>
