--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="../css/nav-footer.css">
 
     </head>
+    <!-- <a href="http://www.saudeemmovimento.com.br/saude/avaliation_fisica_i.htm" target="_blank" rel="nofollow"></a> -->
     <body>
         <header>
             <div class="caixa">
@@ -20,7 +21,7 @@
                         <li><a href="../index.html" target="_self" rel="prev">Home</a></li>
                         <li><a href="produtos.html" target="_self" rel="next">Serviços</a></li>
                         <li><a href="../contato/contato.html" target="_self" rel="next">Contato</a></li>
-                        <li><a href="http://www.saudeemmovimento.com.br/saude/avaliation_fisica_i.htm" target="_blank" rel="nofollow">Avaliação Física</a></li>                
+                        <li><a href="../avaliações/imc.html" target="_self" rel="next">>Avaliação Física</a></li>                
                     </ul>
                 </nav>
             </div>
