--- a/avaliações/imc.html
+++ b/avaliações/imc.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
-        <title> Contatos - Peixe Personal</title>
+        <title> IMC Avaliação - Peixe Personal</title>
         <link rel="stylesheet" href="../css/reset.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
@@ -18,7 +18,7 @@
                     <ul>
                         <li><a href="../index.html" target="_self" rel="prev">Home</a></li>
                         <li><a href="../produtos/produtos.html" target="_self" rel="next">Serviços</a></li>
-                        <li><a href="contato.html" target="_self" rel="next">Contato</a></li>
+                        <li><a href="../contato/contato.html" target="_self" rel="next">Contato</a></li>
                         <li><a href="../avaliações/imc.html" target="_self" rel="next">Avaliação Física</a></li>                
                     </ul>
                 </nav>
@@ -52,9 +52,7 @@
                 <span class="risco">Índice, Classificação e Riscos!</span>
             </div>
             </section>
-
         </main>
-
         <footer>
             <img src="../imagens/personalBranco.png" alt="Logo Peixe Personal">
             <p class="copyright">&copy;Copyright Peixe Personal LTDA - 2022</p>
