Criando Side-bar
Brincando de criar o side-bar e conseguindo solo!

--- a/avaliações/imc.html
+++ b/avaliações/imc.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/imc.css">
         <link rel="stylesheet" href="../css/nav-footer.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <header>
@@ -26,8 +27,16 @@
         </header>
 
         <main>
+
+            <section class="side-bar">
+                <ul>
+                    <li class="instagram"><a href="https://www.instagram.com/peixe.personal/" target="_blank" title="instagram Peixe Personal" rel="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/KinesisFuncional" target="_blank" title="Kinesis Funcional Facebook" rel="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li class="github"><a href="https://github.com/JC-Peixe" target="_blank" title="GitHub Peixe" rel="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+                    <li class="linkedin"><a href="https://www.linkedin.com/in/j%C3%B4natas-cassiano-gouveia-de-ara%C3%BAjo-0b9397233/" target="_blank" title="linkedin Peixe" rel="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                </ul>
+            </section>
             <section class="formulario">
-     
             <form action="" id="calculo-imc">
 
                 <label for="nomesobrenome">Nome e Sobrenome</label>
