--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/produtos.css">
         <link rel="stylesheet" href="../css/nav-footer.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <!-- <a href="http://www.saudeemmovimento.com.br/saude/avaliation_fisica_i.htm" target="_blank" rel="nofollow"></a> -->
     <body>
@@ -21,13 +21,21 @@
                         <li><a href="../index.html" target="_self" rel="prev">Home</a></li>
                         <li><a href="produtos.html" target="_self" rel="next">Serviços</a></li>
                         <li><a href="../contato/contato.html" target="_self" rel="next">Contato</a></li>
-                        <li><a href="../avaliações/imc.html" target="_self" rel="next">>Avaliação Física</a></li>                
+                        <li><a href="../avaliações/imc.html" target="_self" rel="next">Avaliação Física</a></li>                
                     </ul>
                 </nav>
             </div>
             
         </header>
         <main>
+            <section class="side-bar">
+                <ul>
+                    <li class="instagram"><a href="https://www.instagram.com/peixe.personal/" target="_blank" title="instagram Peixe Personal" rel="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/KinesisFuncional" target="_blank" title="Kinesis Funcional Facebook" rel="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li class="github"><a href="https://github.com/JC-Peixe" target="_blank" title="GitHub Peixe" rel="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+                    <li class="linkedin"><a href="https://www.linkedin.com/in/j%C3%B4natas-cassiano-gouveia-de-ara%C3%BAjo-0b9397233/" target="_blank" title="linkedin Peixe" rel="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                </ul>
+            </section>
             <div>
             <ul class="produtos">
                 <li id="personal">
