--- a/avaliações/imc.html
+++ b/avaliações/imc.html
@@ -67,6 +67,8 @@
             <p class="copyright">&copy;Copyright Peixe Personal LTDA - 2022</p>
         </footer>
 		<script src="../javascript/imc.js"></script>
+		<script src="../javascript/form-imc.js"></script>
+
 
     </body>
 </html>
