--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="index.html" target="_self" rel="prev">Home</a></li>
                         <li><a href="produtos/produtos.html" target="_self" rel="next">Serviços</a></li>
                         <li><a href="contato/contato.html" target="_self" rel="next">Contato</a></li>
-                        <li><a href="avaliações/imc.html" target="_blank" rel="nofollow">Avaliação Física</a></li>                
+                        <li><a href="avaliações/indice.html" target="_self" rel="next">Avaliação Física</a></li>                
                     </ul>
                 </nav>
             </div>
